--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net:3306/sql7615109
-spring.datasource.username=sql7615109
-spring.datasource.password=A4zYGLsdJ8
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/expenses_db
+spring.datasource.username=expenseuser
+spring.datasource.password=expensePass123
