--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:sqlserver://expensecalculatordb.database.windows.net:1433;database=expensecalculatordb;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:mysql://expensecalculatordb.mysql.database.azure.com:3306/expensecalculatordb?useSSL=true
 spring.datasource.username=expensecalculatordbuser
-spring.datasource.password=Expense123
+spring.datasource.password=Tomsgaardsvej1
