--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.datasource.url=jdbc:mysql://expensecalculatordb.mysql.database.azure.com:3306/expensecalculatordb?useSSL=true
+spring.datasource.url=jdbc:mysql://expensecalculatordb.mysql.database.azure.com:3306/expenses_db
 spring.datasource.username=expensecalculatordbuser
 spring.datasource.password=Tomsgaardsvej1
+spring.sql.init.mode=always
+
+!spring.datasource.url=jdbc:mysql://localhost:3306/expensecalculatordb
+!spring.datasource.username=expenseuser
+!spring.datasource.password=Expensepassword
