--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=expensecalculatordbuser
 spring.datasource.password=Tomsgaardsvej1
 spring.sql.init.mode=always
 
-!spring.datasource.url=jdbc:mysql://localhost:3306/expensecalculatordb
+!spring.datasource.url=jdbc:mysql://localhost:3306/expenses_db
 !spring.datasource.username=expenseuser
 !spring.datasource.password=Expensepassword
